--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             I am single.
             From this class, I am hoping to get useful skills that will help me be succesful in my major and future career.
             And I am a follower of the Ethiopian Orthodox Church.
-            <br> I love playing tennis so if you want a tennis-buddy, I'm here.
+            <br> I love playing tennis so if you want a tennis-buddy, I'm here guys!
         </p>
     </main>
 </body>
