--- a/wwr/index.html
+++ b/wwr/index.html
@@ -53,7 +53,7 @@
         </section>
     </main>
     <footer>
-        <p>Dry Oar &copy; 2024 - Leul Eshetu</p>
+        <p>White Water Rafting &copy; 2024 - Leul Eshetu</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
