--- a/ice/ice-challenge.html
+++ b/ice/ice-challenge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link type= "text/css" rel="stylesheet" href="styles/ice-challenge.css">
     <title>Education</title>
 </head>
 <body>
@@ -24,7 +24,9 @@
                 <li>Baptism by immersion for the remission of sins</li>
                 <li>Laying on of hands for the gift of the Holy Ghost</li>
             </ul>
-
+            <section> 
+                <img src="nelson.jpeg" alt="President Nelson"/>
+            </section>
             <blockquote>
                 <p>Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure.</p>
                 <footer>—Russell M. Nelson, President of the Church of Jesus Christ of Latter-day Saints</footer>
