--- a/ice/ice-challenge.html
+++ b/ice/ice-challenge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type= "text/css" rel="stylesheet" href="styles/ice-challenge.css">
+    <link rel="stylesheet" type= "text/css" href="styles.css">
     <title>Education</title>
 </head>
 <body>
