--- a/ice/ice-challenge.html
+++ b/ice/ice-challenge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/ice-challenge.css"/>
     <title>Education</title>
 </head>
 <body>
@@ -12,12 +12,8 @@
     </header>
     <main>
         <section>
-            <blockquote>
                 <p>Education is the difference between wishing you could help others & being able to help them</p>
-                <footer>—President Nelson</footer>
-            </blockquote>
-
-            <h2>Key Principles</h2>
+                <p>---President Nelson</p>
             <ul>
                 <li>Faith in the Lord Jesus Christ</li>
                 <li>Repentance</li>
