--- a/ice/ice-challenge.html
+++ b/ice/ice-challenge.html
@@ -7,27 +7,31 @@
     <title>Education</title>
 </head>
 <body>
-    <header>
+    <main classs="all">
         <h1 class="title">Education</h1>
-    </header>
-    <main>
-        <section>
-                <p>Education is the difference between wishing you could help others & being able to help them</p>
+        <section id="top1">
+            <p>Education is the difference between wishing you could help others &</p>
+            <p> </p>being able to help them</p>
+            <div id="top">
                 <p>---President Nelson</p>
-            <ul>
+            </div>
+            <ol>
                 <li>Faith in the Lord Jesus Christ</li>
                 <li>Repentance</li>
                 <li>Baptism by immersion for the remission of sins</li>
                 <li>Laying on of hands for the gift of the Holy Ghost</li>
-            </ul>
-            <section> 
+            </ol>
+            <section id="pic"> 
                 <img src="nelson.jpeg" alt="President Nelson"/>
             </section>
-            <blockquote>
-                <p>Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure.</p>
-                <footer>—Russell M. Nelson, President of the Church of Jesus Christ of Latter-day Saints</footer>
-            </blockquote>
+            <section id="quote">
+                <p>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</p>
+            </section>
         </section>
+        <div id="footer">
+            Russell M. Nelson<br>
+            President of the Church of Jesus Christ of Latter-<br> Saints
+        </div>
     </main>
 </body>
 </html>
