--- a/ice/ice-challenge.html
+++ b/ice/ice-challenge.html
@@ -22,7 +22,7 @@
                 <li>Laying on of hands for the gift of the Holy Ghost</li>
             </ol>
             <section id="pic"> 
-                <img src="nelson.jpeg" alt="President Nelson"/>
+                <img src="/Users/apple/Document for mac/wdd130a/ice/image/nelson.jpeg" alt="President Nelson"/>
             </section>
             <section id="quote">
                 <p>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</p>
