--- a/ice/ice-challenge.html
+++ b/ice/ice-challenge.html
@@ -9,24 +9,27 @@
 <body>
     <main classs="all">
         <h1 class="title">Education</h1>
-        <section id="top1">
+        <section>
             <p>Education is the difference between wishing you could help others &</p>
-            <p> </p>being able to help them</p>
+            <p> being able to help them</p>
             <div id="top">
                 <p>---President Nelson</p>
             </div>
+            <div id="art4">
             <ol>
                 <li>Faith in the Lord Jesus Christ</li>
                 <li>Repentance</li>
                 <li>Baptism by immersion for the remission of sins</li>
                 <li>Laying on of hands for the gift of the Holy Ghost</li>
             </ol>
+            </div>
             <section id="pic"> 
-                <img src="/Users/apple/Document for mac/wdd130a/ice/image/nelson.jpeg" alt="President Nelson"/>
+                <img src="image/nelson.jpeg" alt="President Nelson" width="200"/>
             </section>
-            <section id="quote">
+            <div id="background"></div>
+            <div id="quote">
                 <p>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</p>
-            </section>
+            </div>
         </section>
         <div id="footer">
             Russell M. Nelson<br>
