--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD130 | Home</title>
+    
 </head>
+<style>
+    body{
+        background: cyan;
+    }
+    #profile{
+        width: 600 px
+    }
+    a{
+        font-size: 20;
+    }
+</style>
 <body>
     Hello, World!!
     <nav>
@@ -16,7 +28,8 @@
     </nav>
     <main>
         <h1>Leul(Prince) Eshetu</h1>
-        <img src="DSC_0310 Medium.jpeg" alt="Hey, this is me!"
+        <hr>
+        <img src="images/DSC_0310 Medium.jpeg" alt="Hey, this is me!">
         <p>
         <br>
             I am Leul. It's pronounced like Luke but instead of 'k' it's 'l'.
