--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <h1>Leul(Prince) Eshetu</h1>
         <hr>
         <img src="images/DSC_0310 Medium.jpeg" alt="Hey, this is me!">
+        <hr>
+        <img src="images-for-personal-website/Download-Snoopy-Wallpaper-HD.jpg" alt="Snoopy the dog">
         <p>
         <br>
             I am Leul. It's pronounced like Luke but instead of 'k' it's 'l'.
