--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     a{
         font-size: 20;
     }
+    .image {
+        s
+    }
 </style>
 <body>
     Hello, World!!
@@ -31,7 +34,7 @@
         <hr>
         <img src="images/DSC_0310 Medium.jpeg" alt="Hey, this is me!">
         <hr>
-        <img src="images-for-personal-website/Download-Snoopy-Wallpaper-HD.jpg" alt="Snoopy the dog">
+        <img class= "image" src="images-for-personal-website/Download-Snoopy-Wallpaper-HD.jpg" alt="Snoopy the dog">
         <p>
         <br>
             I am Leul. It's pronounced like Luke but instead of 'k' it's 'l'.
