--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     body{
-        background: cyan;
+        background: lightsalmon;
     }
     #profile{
         width: 600 px
@@ -17,7 +17,7 @@
         font-size: 20;
     }
     .image {
-        s
+        size: 0cm;
     }
 </style>
 <body>
