--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <style>
     body{
-        background: lightsalmon;
+        background: linear-gradient(salmon, lightblue);
+        font-style: italic;
     }
     #profile{
         width: 600 px
@@ -17,12 +18,16 @@
         font-size: 20;
     }
     .image {
-        size: 0cm;
+        width: 700px;
+        height: auto;
+    }
+    .links{
+        display: block;
     }
 </style>
 <body>
     Hello, World!!
-    <nav>
+    <nav class="links">
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
@@ -34,7 +39,7 @@
         <hr>
         <img src="images/DSC_0310 Medium.jpeg" alt="Hey, this is me!">
         <hr>
-        <img class= "image" src="images-for-personal-website/Download-Snoopy-Wallpaper-HD.jpg" alt="Snoopy the dog">
+        <img class= "image" src="practice/images-for-personal-website/Download-Snoopy-Wallpaper-HD Medium.jpeg" alt="Snoopy the dog">
         <p>
         <br>
             I am Leul. It's pronounced like Luke but instead of 'k' it's 'l'.
