--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,9 +14,9 @@
         </a>
         <nav>
             <a href= "index.html"> Home</a>
-            <a href= "contactus.html"> Contact Us</a>
-            <a href= "site-plan-rafting.html">Site Plan</a>
             <a href="#"> Page 02</a>
+            <a href= "site-plan-rafting.html">Site Plan</a>
+            <a href= "contactus.html"> Contact Us</a>
         </nav>
     </header>
     <div id="hero">
@@ -73,4 +73,12 @@
     </footer>
     </div> <!--id="content"-->
 </body>
+<p>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+</p>
+     
 </html>
