--- a/j.html
+++ b/j.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD130 | Home</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
 <style>
     /* General Styles */
 body {
@@ -117,44 +109,6 @@ body {
     background-color: rgb(203, 199, 237);
     border-radius: 20%;
     float: right;
+    width
 }
 </style>
-
-
-<body class="container">
-    <header class="hero-section">
-        <div class="overlay">
-            <img src="../../images/DSC_0310 Medium.jpeg" alt="Hey, this is me!" class="hero-image">
-        </div>
-        <h1>Leul (Prince) Eshetu</h1>
-        <p>Computer Science Student | AI Enthusiast</p>
-    </header>
-
-    <nav class="links">
-        <a href="wwr/index.html">White Water Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-        <a href="positioning.html">Positioning Activity</a>
-        <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
-    </nav>
-
-    <main>
-        <section class="image-section">
-            <div class="image-container">
-                <img class="image" src="../images-for-personal-website/Download-Snoopy-Wallpaper-HD Medium.jpeg" alt="Snoopy the dog">
-                <div class="text-overlay">This is Snoopy</div>
-            </div>
-        </section>
-            <div class="about-me">
-            <p>
-                I am Leul. It's pronounced like Luke but instead of 'k' it's 'l'. I am majoring in computer science 
-                and plan to go into AI studies. I am from Ethiopia but also attended high school in Pennsylvania.
-                From this class, I hope to gain skills that will help me in my major and future career.
-                I am a follower of the Ethiopian Orthodox Church.
-                <br> I love playing tennis, so if you want a tennis buddy, I'm here guys!
-            </p>
-            </div>
-        </section>
-    </main>
-</body>
-</html>
