--- a/herophoto/site-plan.html
+++ b/herophoto/site-plan.html
@@ -10,9 +10,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>HERO Photography Site Plan</h1>
+      <h2>Leul Eshetu</h2>
+      <h2>WDD 130-03</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -21,17 +21,19 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>The HERO team has the unique experience of being well versed in taking photography due to their backgrounds, experience, and abilities in a variety of areas.  
+        Therefore, our purpose is; Make a website that will help users find their pictures from White Water Rafting and purchase them! People are able to enter their registration number when asked for a passowrd after they open the link for the website.
+        They can search for their pictures by using dates, and select the picture they want to purchase.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>Adventure-loving individuals and families who want to focus on enjoying their experiences without worrying about taking photos.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/logo Small.jpeg" alt="Logo image">
       <hr>
       <h2>
         Style Guide
