--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -117,7 +117,7 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
-
+    <img src="images/IMG_4874 Medium.png" alt="Subpage wireframe image/sketch"/>
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
