--- a/herophoto/site-plan.html
+++ b/herophoto/site-plan.html
@@ -121,31 +121,102 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
+      <h3>Welcome to Hero Photography. Capturing Your Adventures, One Snap at a Time!</h3>
       <p>
-        [Written copy for the home page here]
+        At Hero Photography, we know that life’s most thrilling experiences don’t come with time to pull out a camera. Whether it’s the adrenaline of white-water rafting, the satisfaction of conquering a rugged trail, or the exhilaration of a family zip-line trip, you’re focused on the moment, and that’s where you should stay. Hero Photography is here to capture the moments you live for so you can relive them anytime. Our website is designed to provide an easy, stress-free way for adventurers to find and purchase high-quality, professional photos from their favorite activity spots.
+
+Imagine spending the day rafting down a river or riding mountain trails, with the peace of mind that a dedicated photographer is capturing every exhilarating moment without you needing to handle a camera. Our photographers do all the work, so you can immerse yourself in your adventure. All you need to do later is log onto Hero Photography, enter a simple passcode, and access your photos. From there, your unforgettable moments are just a click away.
+​​Why Choose Hero Photography?
+Hero Photography stands out for several reasons that make it a top choice for activity-goers and adventure companies alike:
+Convenience: Instead of fumbling with phones and cameras mid-activity, our customers can leave the photo-taking to the professionals. Enjoy a hands-free adventure with the certainty that great shots are being taken by photographers who know the site well.
+Quality and Affordability: With each purchase, you’re guaranteed high-resolution, professional-grade images that capture the beauty of the location and the excitement of the moment. We offer flexible pricing options, so you can buy a single highlight shot or a complete photo package from your day.
+Simple Access: Our website's user-friendly access system allows you to quickly and securely view, select, and purchase your photos without any hassle. Just enter your passcode, and you’re in! 
+
+Cost Transparency and Affordable Packages
+At Hero Photography, we believe in transparent, affordable pricing. We offer several pricing packages to meet different needs. Single-photo purchases allow customers to pay only for their favorite shots, while bundle packages provide greater value for customers who want a series of images. Group discounts make it easier for everyone to get a memorable keepsake.
+Preview Before Purchase: Customers get a preview of their images, so they can decide what to buy before any payments are made.
+Clear Package Options: With each adventure site, we outline package options and prices, so there are no hidden fees or surprises.
+We believe that capturing adventure memories should be accessible to all, so we keep our prices reasonable and our process clear.
+
+Join the Hero Photography Adventure!
+If you’re ready to experience your adventures without distraction, Hero Photography is here to make that possible. Every thrilling moment deserves to be preserved, and our mission is to give you an easy, affordable way to relive those memories. Just focus on the adventure—Hero will take care of the rest.
+How Hero Photography Benefits Activity Providers
+Our service also benefits the activity companies we partner with, adding value to the adventure packages they offer. By integrating Hero Photography, adventure companies gain an extra revenue stream, attract more customers, and provide a complete experience for their clients.
+    Marketing Content: When customers share Hero photos on social media or with family, it’s free advertisement for the provider, reaching potential new clients.
+    On-Site Photography Team: With Hero Photography, activity providers have skilled photographers dedicated to capturing the excitement of their services.
+Our Plans for Growth and Partnership
+As Hero Photography continues to grow, we’re excited to expand our services and enhance the experience for both customers and business partners. We’re currently looking to partner with local photography studios and professional photographers who share our passion for adventure and capturing stunning moments. By creating a strong network of skilled photographers, we can extend our coverage to even more adventure locations, ensuring that no moment goes uncaptured.
+
+Our future plans also include developing technology that will further simplify and personalize the user experience. For instance, we’re exploring the possibility of automated photo categorization, which will allow customers to find specific types of photos more easily. We’re also considering the option to introduce a loyalty program for frequent users and group accounts for larger teams and families. As we expand, Hero Photography is committed to improving both our website’s functionality and the range of adventures we capture.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/rafting54_1024.jpg" alt="image for homepage">
+        <img src="images/rafting59_600.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Your Adventure Photos</h3>
       <p>
-        [Written copy for the Page 2 here]
+Welcome to Your Adventure Photos—the heart of Hero Photography! Here, you’ll find and purchase high-quality photos captured during your adventure. Each gallery is organized by your rafting boat number and includes different photo categories, so you can easily find the shots you’re looking for. Select your gallery below, and enter your personalized passcode to view and purchase your photos.
+Find Your Photos by Rafting Boat Number
+We’ve grouped your photos into two main categories, each tailored to give you the best memories of your rafting experience. Choose the category that best fits your needs:
+Portraits of Your Rafting Adventures with Your Rafting Boat #
+Individual and group portraits captured mid-adventure, focusing on the unique personalities and expressions of each member on your raft. Perfect for those looking for close-up shots with plenty of action!
+Family-Size (Horizontal) Photos with Your Rafting Boat #
+Larger shots showcasing the entire group on the raft, capturing the joy of shared moments as you navigate the rapids together.
+Access Your Photos with a Passcode
+For privacy and convenience, each group is protected by a passcode that only you and your party members know. To access your photos, select the relevant category, enter your Rafting Boat Number and Passcode in the text box provided, and unlock your personal gallery.
+
+Enter Your Passcode
+Rafting Boat Number: [Text Box]
+Passcode: [Text Box]
+Click “Unlock Gallery” to view your photos.
+—-----------------------------
+
+
+Customer Galleries: See the Adventures Captured by Hero Photography
+Customer Galleries: See the Adventures Captured by Hero Photography
+At Hero Photography, we’re proud to share the unforgettable moments of our customers who have given us permission to showcase their adventures. In our Customer Galleries, you’ll find stories and snapshots from real adventurers like you, each image capturing the excitement and beauty of their unique experiences. These posts are more than just photos—they’re glimpses into the thrill of being fully immersed in an adventure, whether it’s braving white-water rapids, trekking up a mountain trail, or soaring on a zip line.
+Each featured gallery includes a brief blog entry from the customer, providing background on the adventure and describing the memories behind each image. From the adrenaline of trying a new activity to the joy of sharing a day outdoors with family or friends, every story gives a personal touch to the photos and allows future customers to get a feel for the experience.
+Explore our galleries to see what awaits you, and feel inspired to create your own memorable moments with Hero Photography by your side!
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/rafting62_1024.jpg" alt="image for page">
+        <img src="images/rafting65_600.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>About Us</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Welcome to Hero Photography! Our mission is to capture unforgettable moments for adventure seekers. Whether you're riding the rapids, hiking a scenic trail, or experiencing another thrilling activity, we make sure you can relive those moments with high-quality photos. Learn more about our partners, our team of photographers, and how to get in touch below.
+
+Our Adventure Partner: White Water Rafting Company
+We’re thrilled to work closely with [White Water Rafting Company]—a premier provider of thrilling rafting adventures! Known for their safety, expertise, and passion for the river, they’ve been guiding unforgettable rafting trips for years. Our partnership allows us to be on-site, capturing every splash and thrill that comes with navigating rapids. With [White Water Rafting Company], customers can enjoy a unique experience of rafting while Hero Photography takes care of preserving the memories.
+For more information about our partner or to book a rafting adventure, visit White Water Rafting Company’s website or contact them at:
+Phone: [Company’s Contact Number]
+Email: [Company’s Email Address]
+Address: [Company’s Physical Address]
+
+Meet Our Photographers
+Our photographers are the heart of Hero Photography. Each team member is experienced in capturing dynamic, fast-paced action shots in adventurous environments. They know the terrain, the right angles, and the timing it takes to capture the spirit of each adventure.
+Contact Our Photographers
+For customers interested in learning more about our photographers, their backgrounds, or booking private photography services, you can reach out directly:
+Photographer Name: [Name of Photographer]
+Email: [Photographer’s Email Address]
+Social Media/Portfolio Links: [Link to their work]
+Our photographers are based near popular adventure locations, so whether you’re planning a white-water rafting trip or a mountain hike, they’re ready to help you make the memories last.
+
+Contact Hero Photography
+Have questions about Hero Photography, our services, or how to access your photos? We’re here to help! Feel free to reach out to us using the contact information below.
+Hero Photography Contact Information
+Phone: [Hero Photography Contact Number]
+Email: support@herophotography.com
+Address: [Hero Photography Business Address]
+Hours: Monday - Friday, 9 AM - 5 PM
+Or fill out our contact form below, and we’ll get back to you as soon as possible. Thank you for choosing Hero Photography—we look forward to capturing your next adventure!
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/rafting47_600.jpg" alt="image for page3">
+        <img src="images/rafting42_600.jpg" alt="image for page3">
 
       </ul>
       <hr>
