--- a/practice/ice5/ice-challenge5.html
+++ b/practice/ice5/ice-challenge5.html
@@ -17,7 +17,7 @@
                 <p>This would be some text to go here and tell you about this awesome article that they should definitely read. This would be some text to go here adn tell you about this awesome article that they should definitely read. This would be some text to go here.</p>
                 <span class="base">
                     <div>5<sub>m</sub><br><sub>READ</sub></div>
-                    <div>2031<br><sub>VIEWS</sub></div>
+                    <div class="between">2031<br><sub>VIEWS</sub></div>
                     <div>15<br><sub>COMMENTS</sub></div>
                 </span>
             </span>
