--- a/herophoto/site-plan.html
+++ b/herophoto/site-plan.html
@@ -228,21 +228,23 @@ Or fill out our contact form below, and we’ll get back to you as soon as possi
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        DETAIL: The Background is going to be two cool darken pictures. 
+        <br> I plan to use a laptop and a phone as a picture to hold the display of the picture - just as a preview gallery. 
+        <br>I also plan to make eveyr picture in this website to make some type of motion when users hover around.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage Small.jpeg" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Log IN page/ Get Your Photos Page</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        DETAIL: Have some features of asking for email and password to log in and access their photos.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/LogIN page: Your photo page Small.jpeg" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Gallery</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        DETAIL: Find stories and snapshots from real adventurers, each image capturing the excitement and beauty of unique experiences attracting users/viewers.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Gallery Small.jpeg" alt="page 3 wireframe">
     </main>
   </body>
 
