--- a/wwr/river.html
+++ b/wwr/river.html
@@ -14,17 +14,53 @@
         </a>
         <nav>
             <a href= "index.html"> Home</a>
-            <a href="#"> Page 02</a>
+            <a href="#"> Rivers</a>
             <a href= "site-plan-rafting.html">Site Plan</a>
             <a href= "contactus.html"> Contact Us</a>
         </nav>
     </header>
-    <main class="home-grid">
-        <div id ="twocolumn">
-            <div class="leftside"></div>
-                <img src="">
-            <div class="rightside"></div>
-                text here blah blah blah blah
+    <main class="rhome-grid">
+        <section id="rgallery-intro">
+            <h1 class="rhome-title">Explore the Rivers</h1>
+            <p>Discover the beauty of nature through breathtaking river adventures. Below are some of the most iconic rafting destinations, each offering a unique experience.</p>
+        </section>
+        <br><div id ="threecolumn">
+
+            <section class="river-card">
+                <div class="rcard-img-container">
+                    <img src="images/river3.jpg" alt="Main Fork of the Salmon River">
+                </div>
+                <div class="rcard-content">
+                    <h2>Main Fork of the Salmon River, Idaho</h2>
+                    <p>
+                        Nestled deep in the Frank Church Wilderness of No Return, the Salmon River is a haven of natural beauty, lined with towering pine trees and teeming with wildlife. Experience Class I-IV rapids and sandy beaches perfect for family adventures.
+                    </p>
+                </div>
+            </section>
+
+            <section class="river-card">
+                <div class="rcard-img-container">
+                    <img src="images/river2.jpg" alt="Desolation and Gray Canyon, Utah">
+                </div>
+                <div class="rcard-content">
+                    <h2>Desolation and Gray Canyon, Utah</h2>
+                    <p>
+                        Travel through Utah's most rugged canyons on the Green River. With stunning desert landscapes and Class II/III rapids, this 84-mile trip is perfect for history enthusiasts and thrill-seekers alike.
+                    </p>
+                </div>
+            </section>
+
+            <section class="river-card">
+                <div class="rcard-img-container">
+                    <img src="images/river.jpg" alt="Grand Canyon, Arizona">
+                </div>
+                <div class="rcard-content">
+                    <h2>Grand Canyon, Arizona</h2>
+                    <p>
+                        The ultimate river adventure! Navigate world-class whitewater while marveling at the grandeur of the canyon. From exhilarating rapids to ancient ruins, this is an experience of a lifetime.
+                    </p>
+                </div>
+            </section>
         </div>
     </main>
     <footer>
