--- a/herophoto/gallery.html
+++ b/herophoto/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hero Photo</title>
+    <title>Gallery</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
