--- a/herophoto/index.html
+++ b/herophoto/index.html
@@ -23,6 +23,7 @@
     <div id="hero">
         <div id="hero-box"> 
             <img id="hero-img" src="images/salmon-kayak1.jpg" alt="People enjoying rafting">
+            <img id="laptop" src="images/Adobe Express 2024-12-05 11.23.27.png" alt="Laptop gallery image">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Hero Photo</h1>
