--- a/herophoto/gallery.html
+++ b/herophoto/gallery.html
@@ -13,9 +13,9 @@
             <img class = "logo" src="images/logo Small.jpeg" alt = "Dry Oar Logo" width="10%" height="10%">
         </a>
         <nav>
-            <a href= "index.html"> Home</a>
-            <a href="login.html"> Log In </a>
-            <a href="gallery.html"> Gallery </a>
+            <a href= "index.html" class="home-link"> Home</a>
+            <a href="login.html" class="login-link"> Log In </a>
+            <a href="gallery.html" class="gallery-link"> Gallery </a>
             <a href= "site-plan.html">Site Plan</a>
             <a href= "contactus.html"> About Us</a>
         </nav>
