--- a/herophoto/index.html
+++ b/herophoto/index.html
@@ -13,22 +13,38 @@
             <img class = "logo" src="images/logo Small.jpeg" alt = "Dry Oar Logo" width="10%" height="10%">
         </a>
         <nav>
-            <a href= "index.html"> Home</a>
-            <a href="login.html"> Log In </a>
-            <a href="gallery.html"> Gallery </a>
+            <a href= "index.html" class="home-link"> Home</a>
+            <a href="login.html" class="login-link"> Log In</a>
+            <a href="gallery.html" class="gallery-link"> Gallery </a>
             <a href= "site-plan.html">Site Plan</a>
             <a href= "contactus.html"> About Us</a>
         </nav>
     </header>
     <div id="hero">
-        <div id="hero-box"> 
-            <img id="hero-img" src="images/salmon-kayak1.jpg" alt="People enjoying rafting">
-            <img id="laptop" src="images/Adobe Express 2024-12-05 11.23.27.png" alt="Laptop gallery image">
-        </div>
         <section id="hero-msg">
-            <h1 class="home-title">Hero Photo</h1>
+            <h1 class="home-title">hero photo</h1>
             <h4> One Snap everywhere </h4>
         </section>
+        <div id="hero-box"> 
+            <img id="laptop" src="images/Adobe Express 2024-12-05 11.23.27.png" alt="Laptop gallery image">
+            <div id="hero-content">
+                <img id="hero-img" src="images/salmon-kayak1.jpg" alt="People enjoying rafting">
+                <div id="hero-text">
+                    <p>
+                        Welcome to Hero Photography. Capturing Your Adventures, One Snap at a Time!
+                    </p>
+                    <p>
+                        At Hero Photography, we know that life's most thrilling experiences do not come with time to pull out a camera. Whether it’s the adrenaline of white-water rafting, the satisfaction of conquering a rugged trail, or the exhilaration of a family zip-line trip, you’re focused on the moment, and that’s where you should stay.
+                    </p>
+                    <p>
+                        Hero Photography is here to capture the moments you live for so you can relive them anytime. Our website is designed to provide an easy, stress-free way for adventurers to find and purchase high-quality, professional photos from their favorite activity spots.
+                    </p>
+                    <p>
+                        Imagine spending the day rafting down a river or riding mountain trails, with the peace of mind that a dedicated photographer is capturing every exhilarating moment without you needing to handle a camera. Our photographers do all the work, so you can immerse yourself in your adventure. All you need to do later is log onto Hero Photography, enter a simple passcode, and access your photos. From there, your unforgettable moments are just a click away.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
     <main>
 
