log in link from w3 schools with pic

--- a/herophoto/login.html
+++ b/herophoto/login.html
@@ -26,11 +26,11 @@
             <div id="login-container">
                 <div id="login-text">
                     <h1>Welcome back. You've been missed!</h1>
-                    <p>First time? <span id="sign-up-text">Sign in below!</span></p>
+                    <p>First time? <span id="sign-up-text">Sign up below!</span></p>
                     <p><a href="javascript:void(0);" class="sign-in-link" onclick="document.getElementById('id01').style.display='block'">Sign in!</a></p>
                 </div>
                 <div id="login-image">
-                    <img src="images/salmon-kayak1.jpg" alt="People enjoying rafting">
+                    <img src="images/rafting47_600.jpg" alt="People enjoying rafting">
                 </div>
             </div>
 
@@ -41,7 +41,7 @@
                 <!-- Modal Content -->
                 <form class="modal-content animate" action="/action_page.php">
                     <div class="imgcontainer">
-                        <img src="images/rafting47_600.jpg" alt="herolog" class="herolog">
+                        <img src="images/welcome Small.jpeg" alt="herolog" class="herolog">
                     </div>
 
                     <div class="container">
