--- a/herophoto/index.html
+++ b/herophoto/index.html
@@ -25,17 +25,27 @@
             <h1 class="home-title">hero photo</h1>
             <h4> One Snap everywhere </h4>
         </section>
-        <div id="hero-box"> 
+        <div id="intro-box">
+            <div id="intro-text">
+                <p>
+                    Hero Photography is here to capture the moments you live for so you can relive them anytime. 
+                    Our website is designed to provide an easy, stress-free way for adventurers to find and purchase 
+                    high-quality, professional photos from their favorite activity spots.
+                </p>
+                <p>
+                    Imagine spending the day rafting down a river or riding mountain trails, with the peace of mind 
+                    that a dedicated photographer is capturing every exhilarating moment without you needing to handle 
+                    a camera. Our photographers do all the work, so you can immerse yourself in your adventure. 
+                    All you need to do later is log onto Hero Photography, enter a simple passcode, and access your photos. 
+                    From there, your unforgettable moments are just a click away.
+                </p>
+            </div>
             <img id="laptop" src="images/Adobe Express 2024-12-05 11.23.27.png" alt="Laptop gallery image">
+        </div>        
+        <div id="hero-box"> 
             <div id="hero-content">
                 <img id="hero-img" src="images/salmon-kayak1.jpg" alt="People enjoying rafting">
                 <div id="hero-text">
-                    <p>
-                        Welcome to Hero Photography. Capturing Your Adventures, One Snap at a Time!
-                    </p>
-                    <p>
-                        At Hero Photography, we know that life's most thrilling experiences do not come with time to pull out a camera. Whether it’s the adrenaline of white-water rafting, the satisfaction of conquering a rugged trail, or the exhilaration of a family zip-line trip, you’re focused on the moment, and that’s where you should stay.
-                    </p>
                     <p>
                         Hero Photography is here to capture the moments you live for so you can relive them anytime. Our website is designed to provide an easy, stress-free way for adventurers to find and purchase high-quality, professional photos from their favorite activity spots.
                     </p>
