--- a/herophoto/gallery.html
+++ b/herophoto/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/gallerystyle.css">
 </head>
 <body>
     <div id="content">
@@ -20,17 +20,38 @@
             <a href= "contactus.html"> About Us</a>
         </nav>
     </header>
-    <div id="hero">
-        <div id="hero-box"> 
-            <img id="hero-img" src="images/salmon-kayak1.jpg" alt="People enjoying rafting">
-        </div>
-        <section id="hero-msg">
-            <h1 class="home-title">Hero Photo</h1>
-            <h4> One Snap everywhere </h4>
-        </section>
-    </div>
     <main>
-
+        <h1>Gallery</h1>
+        <div id="gallery">
+            <div class="gallery-item">
+                <img src="images/rafting59_600.jpg" alt="Adventure Image 1">
+                <p class="caption">Capture every thrilling moment!</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/rafting62_1024.jpg" alt="Adventure Image 2">
+                <p class="caption">Photography that tells your story.</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/rafting42_600.jpg" alt="Adventure Image 3">
+                <p class="caption">Live your adventure, we'll capture it.</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/rafting47_600.jpg" alt="Adventure Image 4">
+                <p class="caption">Unforgettable memories, forever yours.</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/rafting65_600.jpg" alt="Adventure Image 5">
+                <p class="caption">Your adventure in high definition.</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/rafting54_1024.jpg" alt="Adventure Image 6">
+                <p class="caption">Let the moments speak for themselves.</p>
+            </div>
+            <div class="gallery-item">
+                <img src="images/salmon-kayak1.jpg" alt="Adventure Image 7">
+                <p class="caption">Professional, high-quality photography.</p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
