final project wdd 130

--- a/herophoto/index.html
+++ b/herophoto/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Photo Web" content="A website that captures memories and provides stunning adventure photos for users.">
     <title>Hero Photo</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
@@ -23,7 +24,7 @@
     <div id="hero">
         <section id="hero-msg">
             <h1 class="home-title">hero photo</h1>
-            <h4> One Snap everywhere </h4>
+            <h2> One Snap everywhere </h2>
         </section>
         <div id="intro-box">
             <div id="intro-text">
